// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The New Subscription API stack matches the snapshot 1`] = `
{
  "Metadata": {
    "gu:cdk:constructs": [
      "GuDistributionBucketParameter",
    ],
    "gu:cdk:version": "TEST",
  },
  "Outputs": {
    "newsubscriptionapilambdanewsubscriptionapiCODEEndpoint20222639": {
      "Value": {
        "Fn::Join": [
          "",
          [
            "https://",
            {
              "Ref": "newsubscriptionapilambdanewsubscriptionapiCODE2838767B",
            },
            ".execute-api.",
            {
              "Ref": "AWS::Region",
            },
            ".",
            {
              "Ref": "AWS::URLSuffix",
            },
            "/",
            {
              "Ref": "newsubscriptionapilambdanewsubscriptionapiCODEDeploymentStageCODEC669AD9D",
            },
            "/",
          ],
        ],
      },
    },
  },
  "Parameters": {
    "DistributionBucketName": {
      "Default": "/account/services/artifact.bucket",
      "Description": "SSM parameter containing the S3 bucket name holding distribution artifacts",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "BasePathMapping": {
      "Properties": {
        "DomainName": {
          "Ref": "DomainName",
        },
        "RestApiId": {
          "Ref": "newsubscriptionapilambdanewsubscriptionapiCODE2838767B",
        },
        "Stage": {
          "Ref": "newsubscriptionapilambdanewsubscriptionapiCODEDeploymentStageCODEC669AD9D",
        },
      },
      "Type": "AWS::ApiGateway::BasePathMapping",
    },
    "DNSRecord": {
      "Properties": {
        "HostedZoneId": "Z3KO35ELNWZMSX",
        "Name": "new-subscription-api-code.support.guardianapis.com",
        "ResourceRecords": [
          {
            "Fn::GetAtt": [
              "DomainName",
              "RegionalDomainName",
            ],
          },
        ],
        "TTL": "120",
        "Type": "CNAME",
      },
      "Type": "AWS::Route53::RecordSet",
    },
    "DomainName": {
      "Properties": {
        "DomainName": "new-subscription-api-code.support.guardianapis.com",
        "EndpointConfiguration": {
          "Types": [
            "REGIONAL",
          ],
        },
        "RegionalCertificateArn": {
          "Fn::Join": [
            "",
            [
              "arn:aws:acm:eu-west-1:",
              {
                "Ref": "AWS::AccountId",
              },
              ":certificate/b384a6a0-2f54-4874-b99b-96eeff96c009",
            ],
          ],
        },
        "Tags": [
          {
            "Key": "App",
            "Value": "new-subscription-api",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "support",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::ApiGateway::DomainName",
    },
    "S3catalogreadpolicyE18911B4": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "s3:GetObject",
              "Effect": "Allow",
              "Resource": "arn:aws:s3:::gu-zuora-catalog/PROD/Zuora-CODE/*",
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "S3catalogreadpolicyE18911B4",
        "Roles": [
          {
            "Ref": "newsubscriptionapilambdaServiceRoleE544C2A4",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "ZuoraOAuthSecretsManagerpolicy5448D99B": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "secretsmanager:GetSecretValue",
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:secretsmanager:",
                    {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":secret:CODE/Zuora-OAuth/SupportServiceLambdas-*",
                  ],
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "ZuoraOAuthSecretsManagerpolicy5448D99B",
        "Roles": [
          {
            "Ref": "newsubscriptionapilambdaServiceRoleE544C2A4",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "newsubscriptionapilambdaC15E5D99": {
      "DependsOn": [
        "newsubscriptionapilambdaServiceRoleDefaultPolicy25179405",
        "newsubscriptionapilambdaServiceRoleE544C2A4",
      ],
      "Properties": {
        "Code": {
          "S3Bucket": {
            "Ref": "DistributionBucketName",
          },
          "S3Key": "support/CODE/new-subscription-api/new-subscription-api.zip",
        },
        "Description": "A lambda that creates new Zuora subscriptions, replacing the new-product-api",
        "Environment": {
          "Variables": {
            "APP": "new-subscription-api",
            "NODE_OPTIONS": "--enable-source-maps",
            "STACK": "support",
            "STAGE": "CODE",
          },
        },
        "FunctionName": "new-subscription-api-CODE",
        "Handler": "index.handler",
        "LoggingConfig": {
          "LogFormat": "Text",
        },
        "MemorySize": 1024,
        "Role": {
          "Fn::GetAtt": [
            "newsubscriptionapilambdaServiceRoleE544C2A4",
            "Arn",
          ],
        },
        "Runtime": "nodejs22.x",
        "Tags": [
          {
            "Key": "App",
            "Value": "new-subscription-api",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "support",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
        "Timeout": 300,
      },
      "Type": "AWS::Lambda::Function",
    },
    "newsubscriptionapilambdaServiceRoleDefaultPolicy25179405": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "s3:GetObject*",
                "s3:GetBucket*",
                "s3:List*",
              ],
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":s3:::",
                      {
                        "Ref": "DistributionBucketName",
                      },
                    ],
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":s3:::",
                      {
                        "Ref": "DistributionBucketName",
                      },
                      "/support/CODE/new-subscription-api/new-subscription-api.zip",
                    ],
                  ],
                },
              ],
            },
            {
              "Action": "ssm:GetParametersByPath",
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:ssm:",
                    {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":parameter/CODE/support/new-subscription-api",
                  ],
                ],
              },
            },
            {
              "Action": [
                "ssm:GetParameters",
                "ssm:GetParameter",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:ssm:",
                    {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":parameter/CODE/support/new-subscription-api/*",
                  ],
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "newsubscriptionapilambdaServiceRoleDefaultPolicy25179405",
        "Roles": [
          {
            "Ref": "newsubscriptionapilambdaServiceRoleE544C2A4",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "newsubscriptionapilambdaServiceRoleE544C2A4": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
        "Tags": [
          {
            "Key": "App",
            "Value": "new-subscription-api",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "support",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "newsubscriptionapilambdanewsubscriptionapiCODE2838767B": {
      "Properties": {
        "ApiKeySourceType": "HEADER",
        "Description": "API Gateway created by CDK",
        "Name": "new-subscription-api-CODE",
        "Tags": [
          {
            "Key": "App",
            "Value": "new-subscription-api",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "support",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::ApiGateway::RestApi",
    },
    "newsubscriptionapilambdanewsubscriptionapiCODEANY7AE49035": {
      "Properties": {
        "ApiKeyRequired": true,
        "AuthorizationType": "NONE",
        "HttpMethod": "ANY",
        "Integration": {
          "IntegrationHttpMethod": "POST",
          "Type": "AWS_PROXY",
          "Uri": {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":apigateway:",
                {
                  "Ref": "AWS::Region",
                },
                ":lambda:path/2015-03-31/functions/",
                {
                  "Fn::GetAtt": [
                    "newsubscriptionapilambdaC15E5D99",
                    "Arn",
                  ],
                },
                "/invocations",
              ],
            ],
          },
        },
        "ResourceId": {
          "Fn::GetAtt": [
            "newsubscriptionapilambdanewsubscriptionapiCODE2838767B",
            "RootResourceId",
          ],
        },
        "RestApiId": {
          "Ref": "newsubscriptionapilambdanewsubscriptionapiCODE2838767B",
        },
      },
      "Type": "AWS::ApiGateway::Method",
    },
    "newsubscriptionapilambdanewsubscriptionapiCODEANYApiPermissionTestnewsubscriptionapiCODEnewsubscriptionapilambdanewsubscriptionapiCODEA5E256DEANY32431CE6": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "newsubscriptionapilambdaC15E5D99",
            "Arn",
          ],
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":execute-api:",
              {
                "Ref": "AWS::Region",
              },
              ":",
              {
                "Ref": "AWS::AccountId",
              },
              ":",
              {
                "Ref": "newsubscriptionapilambdanewsubscriptionapiCODE2838767B",
              },
              "/test-invoke-stage/*/",
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "newsubscriptionapilambdanewsubscriptionapiCODEANYApiPermissionnewsubscriptionapiCODEnewsubscriptionapilambdanewsubscriptionapiCODEA5E256DEANY35B3A4C9": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "newsubscriptionapilambdaC15E5D99",
            "Arn",
          ],
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":execute-api:",
              {
                "Ref": "AWS::Region",
              },
              ":",
              {
                "Ref": "AWS::AccountId",
              },
              ":",
              {
                "Ref": "newsubscriptionapilambdanewsubscriptionapiCODE2838767B",
              },
              "/",
              {
                "Ref": "newsubscriptionapilambdanewsubscriptionapiCODEDeploymentStageCODEC669AD9D",
              },
              "/*/",
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "newsubscriptionapilambdanewsubscriptionapiCODEAccount160145E1": {
      "DeletionPolicy": "Retain",
      "DependsOn": [
        "newsubscriptionapilambdanewsubscriptionapiCODE2838767B",
      ],
      "Properties": {
        "CloudWatchRoleArn": {
          "Fn::GetAtt": [
            "newsubscriptionapilambdanewsubscriptionapiCODECloudWatchRoleFE43CB0F",
            "Arn",
          ],
        },
      },
      "Type": "AWS::ApiGateway::Account",
      "UpdateReplacePolicy": "Retain",
    },
    "newsubscriptionapilambdanewsubscriptionapiCODECloudWatchRoleFE43CB0F": {
      "DeletionPolicy": "Retain",
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "apigateway.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AmazonAPIGatewayPushToCloudWatchLogs",
              ],
            ],
          },
        ],
        "Tags": [
          {
            "Key": "App",
            "Value": "new-subscription-api",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "support",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
      "UpdateReplacePolicy": "Retain",
    },
    "newsubscriptionapilambdanewsubscriptionapiCODEDeploymentB92207D9f32fea4a0a02d865c8c86f9a8af308be": {
      "DependsOn": [
        "newsubscriptionapilambdanewsubscriptionapiCODEproxyANY323BC2DD",
        "newsubscriptionapilambdanewsubscriptionapiCODEproxyBFBD1BEA",
        "newsubscriptionapilambdanewsubscriptionapiCODEANY7AE49035",
      ],
      "Properties": {
        "Description": "API Gateway created by CDK",
        "RestApiId": {
          "Ref": "newsubscriptionapilambdanewsubscriptionapiCODE2838767B",
        },
      },
      "Type": "AWS::ApiGateway::Deployment",
    },
    "newsubscriptionapilambdanewsubscriptionapiCODEDeploymentStageCODEC669AD9D": {
      "DependsOn": [
        "newsubscriptionapilambdanewsubscriptionapiCODEAccount160145E1",
      ],
      "Properties": {
        "DeploymentId": {
          "Ref": "newsubscriptionapilambdanewsubscriptionapiCODEDeploymentB92207D9f32fea4a0a02d865c8c86f9a8af308be",
        },
        "RestApiId": {
          "Ref": "newsubscriptionapilambdanewsubscriptionapiCODE2838767B",
        },
        "StageName": "CODE",
        "Tags": [
          {
            "Key": "App",
            "Value": "new-subscription-api",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "support",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::ApiGateway::Stage",
    },
    "newsubscriptionapilambdanewsubscriptionapiCODEUsagePlan27FD2B5C": {
      "Properties": {
        "ApiStages": [
          {
            "ApiId": {
              "Ref": "newsubscriptionapilambdanewsubscriptionapiCODE2838767B",
            },
            "Stage": {
              "Ref": "newsubscriptionapilambdanewsubscriptionapiCODEDeploymentStageCODEC669AD9D",
            },
            "Throttle": {},
          },
        ],
        "Description": "REST endpoints for new-subscription-api",
        "Tags": [
          {
            "Key": "App",
            "Value": "new-subscription-api",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "support",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
        "UsagePlanName": "new-subscription-api-CODE",
      },
      "Type": "AWS::ApiGateway::UsagePlan",
    },
    "newsubscriptionapilambdanewsubscriptionapiCODEUsagePlanUsagePlanKeyResourcenewsubscriptionapiCODEnewsubscriptionapilambdanewsubscriptionapiCODEnewsubscriptionapikeyCODEA274BA02D48BD3AE": {
      "Properties": {
        "KeyId": {
          "Ref": "newsubscriptionapilambdanewsubscriptionapiCODEnewsubscriptionapikeyCODE4D303CEF",
        },
        "KeyType": "API_KEY",
        "UsagePlanId": {
          "Ref": "newsubscriptionapilambdanewsubscriptionapiCODEUsagePlan27FD2B5C",
        },
      },
      "Type": "AWS::ApiGateway::UsagePlanKey",
    },
    "newsubscriptionapilambdanewsubscriptionapiCODEnewsubscriptionapikeyCODE4D303CEF": {
      "Properties": {
        "Enabled": true,
        "Name": "new-subscription-api-key-CODE",
        "StageKeys": [
          {
            "RestApiId": {
              "Ref": "newsubscriptionapilambdanewsubscriptionapiCODE2838767B",
            },
            "StageName": {
              "Ref": "newsubscriptionapilambdanewsubscriptionapiCODEDeploymentStageCODEC669AD9D",
            },
          },
        ],
        "Tags": [
          {
            "Key": "App",
            "Value": "new-subscription-api",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "support",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::ApiGateway::ApiKey",
    },
    "newsubscriptionapilambdanewsubscriptionapiCODEproxyANY323BC2DD": {
      "Properties": {
        "ApiKeyRequired": true,
        "AuthorizationType": "NONE",
        "HttpMethod": "ANY",
        "Integration": {
          "IntegrationHttpMethod": "POST",
          "Type": "AWS_PROXY",
          "Uri": {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":apigateway:",
                {
                  "Ref": "AWS::Region",
                },
                ":lambda:path/2015-03-31/functions/",
                {
                  "Fn::GetAtt": [
                    "newsubscriptionapilambdaC15E5D99",
                    "Arn",
                  ],
                },
                "/invocations",
              ],
            ],
          },
        },
        "ResourceId": {
          "Ref": "newsubscriptionapilambdanewsubscriptionapiCODEproxyBFBD1BEA",
        },
        "RestApiId": {
          "Ref": "newsubscriptionapilambdanewsubscriptionapiCODE2838767B",
        },
      },
      "Type": "AWS::ApiGateway::Method",
    },
    "newsubscriptionapilambdanewsubscriptionapiCODEproxyANYApiPermissionTestnewsubscriptionapiCODEnewsubscriptionapilambdanewsubscriptionapiCODEA5E256DEANYproxy0E6AD1E7": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "newsubscriptionapilambdaC15E5D99",
            "Arn",
          ],
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":execute-api:",
              {
                "Ref": "AWS::Region",
              },
              ":",
              {
                "Ref": "AWS::AccountId",
              },
              ":",
              {
                "Ref": "newsubscriptionapilambdanewsubscriptionapiCODE2838767B",
              },
              "/test-invoke-stage/*/*",
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "newsubscriptionapilambdanewsubscriptionapiCODEproxyANYApiPermissionnewsubscriptionapiCODEnewsubscriptionapilambdanewsubscriptionapiCODEA5E256DEANYproxyB14B287F": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "newsubscriptionapilambdaC15E5D99",
            "Arn",
          ],
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":execute-api:",
              {
                "Ref": "AWS::Region",
              },
              ":",
              {
                "Ref": "AWS::AccountId",
              },
              ":",
              {
                "Ref": "newsubscriptionapilambdanewsubscriptionapiCODE2838767B",
              },
              "/",
              {
                "Ref": "newsubscriptionapilambdanewsubscriptionapiCODEDeploymentStageCODEC669AD9D",
              },
              "/*/*",
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "newsubscriptionapilambdanewsubscriptionapiCODEproxyBFBD1BEA": {
      "Properties": {
        "ParentId": {
          "Fn::GetAtt": [
            "newsubscriptionapilambdanewsubscriptionapiCODE2838767B",
            "RootResourceId",
          ],
        },
        "PathPart": "{proxy+}",
        "RestApiId": {
          "Ref": "newsubscriptionapilambdanewsubscriptionapiCODE2838767B",
        },
      },
      "Type": "AWS::ApiGateway::Resource",
    },
  },
}
`;

exports[`The New Subscription API stack matches the snapshot 2`] = `
{
  "Metadata": {
    "gu:cdk:constructs": [
      "GuDistributionBucketParameter",
    ],
    "gu:cdk:version": "TEST",
  },
  "Outputs": {
    "newsubscriptionapilambdanewsubscriptionapiPRODEndpointC4C065F6": {
      "Value": {
        "Fn::Join": [
          "",
          [
            "https://",
            {
              "Ref": "newsubscriptionapilambdanewsubscriptionapiPRODF2C9BF91",
            },
            ".execute-api.",
            {
              "Ref": "AWS::Region",
            },
            ".",
            {
              "Ref": "AWS::URLSuffix",
            },
            "/",
            {
              "Ref": "newsubscriptionapilambdanewsubscriptionapiPRODDeploymentStagePROD5AE60C2F",
            },
            "/",
          ],
        ],
      },
    },
  },
  "Parameters": {
    "DistributionBucketName": {
      "Default": "/account/services/artifact.bucket",
      "Description": "SSM parameter containing the S3 bucket name holding distribution artifacts",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "ApiGateway5XXAlarmCDK11905206": {
      "Properties": {
        "ActionsEnabled": true,
        "AlarmActions": [
          {
            "Fn::Join": [
              "",
              [
                "arn:aws:sns:",
                {
                  "Ref": "AWS::Region",
                },
                ":",
                {
                  "Ref": "AWS::AccountId",
                },
                ":alarms-handler-topic-PROD",
              ],
            ],
          },
        ],
        "AlarmDescription": "new-subscription-api returned a 5XX response. Search the logs below for "error" for more information. Impact: a user may not be able to create a new subscription through the checkout flow",
        "AlarmName": "new-subscription-api-PROD 5XX errors",
        "ComparisonOperator": "GreaterThanOrEqualToThreshold",
        "Dimensions": [
          {
            "Name": "ApiName",
            "Value": "new-subscription-api-PROD",
          },
        ],
        "EvaluationPeriods": 1,
        "MetricName": "5XXError",
        "Namespace": "AWS/ApiGateway",
        "Period": 60,
        "Statistic": "Sum",
        "Tags": [
          {
            "Key": "App",
            "Value": "new-subscription-api",
          },
          {
            "Key": "DiagnosticLinks",
            "Value": {
              "Fn::Join": [
                "",
                [
                  "lambda:",
                  {
                    "Ref": "newsubscriptionapilambdaC15E5D99",
                  },
                ],
              ],
            },
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "support",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
        "Threshold": 1,
        "TreatMissingData": "notBreaching",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "BasePathMapping": {
      "Properties": {
        "DomainName": {
          "Ref": "DomainName",
        },
        "RestApiId": {
          "Ref": "newsubscriptionapilambdanewsubscriptionapiPRODF2C9BF91",
        },
        "Stage": {
          "Ref": "newsubscriptionapilambdanewsubscriptionapiPRODDeploymentStagePROD5AE60C2F",
        },
      },
      "Type": "AWS::ApiGateway::BasePathMapping",
    },
    "DNSRecord": {
      "Properties": {
        "HostedZoneId": "Z3KO35ELNWZMSX",
        "Name": "new-subscription-api.support.guardianapis.com",
        "ResourceRecords": [
          {
            "Fn::GetAtt": [
              "DomainName",
              "RegionalDomainName",
            ],
          },
        ],
        "TTL": "120",
        "Type": "CNAME",
      },
      "Type": "AWS::Route53::RecordSet",
    },
    "DomainName": {
      "Properties": {
        "DomainName": "new-subscription-api.support.guardianapis.com",
        "EndpointConfiguration": {
          "Types": [
            "REGIONAL",
          ],
        },
        "RegionalCertificateArn": {
          "Fn::Join": [
            "",
            [
              "arn:aws:acm:eu-west-1:",
              {
                "Ref": "AWS::AccountId",
              },
              ":certificate/b384a6a0-2f54-4874-b99b-96eeff96c009",
            ],
          ],
        },
        "Tags": [
          {
            "Key": "App",
            "Value": "new-subscription-api",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "support",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::ApiGateway::DomainName",
    },
    "S3catalogreadpolicyE18911B4": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "s3:GetObject",
              "Effect": "Allow",
              "Resource": "arn:aws:s3:::gu-zuora-catalog/PROD/Zuora-PROD/*",
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "S3catalogreadpolicyE18911B4",
        "Roles": [
          {
            "Ref": "newsubscriptionapilambdaServiceRoleE544C2A4",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "ZuoraOAuthSecretsManagerpolicy5448D99B": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "secretsmanager:GetSecretValue",
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:secretsmanager:",
                    {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":secret:PROD/Zuora-OAuth/SupportServiceLambdas-*",
                  ],
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "ZuoraOAuthSecretsManagerpolicy5448D99B",
        "Roles": [
          {
            "Ref": "newsubscriptionapilambdaServiceRoleE544C2A4",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "newsubscriptionapilambdaC15E5D99": {
      "DependsOn": [
        "newsubscriptionapilambdaServiceRoleDefaultPolicy25179405",
        "newsubscriptionapilambdaServiceRoleE544C2A4",
      ],
      "Properties": {
        "Code": {
          "S3Bucket": {
            "Ref": "DistributionBucketName",
          },
          "S3Key": "support/PROD/new-subscription-api/new-subscription-api.zip",
        },
        "Description": "A lambda that creates new Zuora subscriptions, replacing the new-product-api",
        "Environment": {
          "Variables": {
            "APP": "new-subscription-api",
            "NODE_OPTIONS": "--enable-source-maps",
            "STACK": "support",
            "STAGE": "PROD",
          },
        },
        "FunctionName": "new-subscription-api-PROD",
        "Handler": "index.handler",
        "LoggingConfig": {
          "LogFormat": "Text",
        },
        "MemorySize": 1024,
        "Role": {
          "Fn::GetAtt": [
            "newsubscriptionapilambdaServiceRoleE544C2A4",
            "Arn",
          ],
        },
        "Runtime": "nodejs22.x",
        "Tags": [
          {
            "Key": "App",
            "Value": "new-subscription-api",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "support",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
        "Timeout": 300,
      },
      "Type": "AWS::Lambda::Function",
    },
    "newsubscriptionapilambdaServiceRoleDefaultPolicy25179405": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "s3:GetObject*",
                "s3:GetBucket*",
                "s3:List*",
              ],
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":s3:::",
                      {
                        "Ref": "DistributionBucketName",
                      },
                    ],
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":s3:::",
                      {
                        "Ref": "DistributionBucketName",
                      },
                      "/support/PROD/new-subscription-api/new-subscription-api.zip",
                    ],
                  ],
                },
              ],
            },
            {
              "Action": "ssm:GetParametersByPath",
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:ssm:",
                    {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":parameter/PROD/support/new-subscription-api",
                  ],
                ],
              },
            },
            {
              "Action": [
                "ssm:GetParameters",
                "ssm:GetParameter",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:ssm:",
                    {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":parameter/PROD/support/new-subscription-api/*",
                  ],
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "newsubscriptionapilambdaServiceRoleDefaultPolicy25179405",
        "Roles": [
          {
            "Ref": "newsubscriptionapilambdaServiceRoleE544C2A4",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "newsubscriptionapilambdaServiceRoleE544C2A4": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
        "Tags": [
          {
            "Key": "App",
            "Value": "new-subscription-api",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "support",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "newsubscriptionapilambdanewsubscriptionapiPRODANYAFE9D7DE": {
      "Properties": {
        "ApiKeyRequired": true,
        "AuthorizationType": "NONE",
        "HttpMethod": "ANY",
        "Integration": {
          "IntegrationHttpMethod": "POST",
          "Type": "AWS_PROXY",
          "Uri": {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":apigateway:",
                {
                  "Ref": "AWS::Region",
                },
                ":lambda:path/2015-03-31/functions/",
                {
                  "Fn::GetAtt": [
                    "newsubscriptionapilambdaC15E5D99",
                    "Arn",
                  ],
                },
                "/invocations",
              ],
            ],
          },
        },
        "ResourceId": {
          "Fn::GetAtt": [
            "newsubscriptionapilambdanewsubscriptionapiPRODF2C9BF91",
            "RootResourceId",
          ],
        },
        "RestApiId": {
          "Ref": "newsubscriptionapilambdanewsubscriptionapiPRODF2C9BF91",
        },
      },
      "Type": "AWS::ApiGateway::Method",
    },
    "newsubscriptionapilambdanewsubscriptionapiPRODANYApiPermissionTestnewsubscriptionapiPRODnewsubscriptionapilambdanewsubscriptionapiPRODE7DA6E3AANY63FFA8B5": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "newsubscriptionapilambdaC15E5D99",
            "Arn",
          ],
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":execute-api:",
              {
                "Ref": "AWS::Region",
              },
              ":",
              {
                "Ref": "AWS::AccountId",
              },
              ":",
              {
                "Ref": "newsubscriptionapilambdanewsubscriptionapiPRODF2C9BF91",
              },
              "/test-invoke-stage/*/",
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "newsubscriptionapilambdanewsubscriptionapiPRODANYApiPermissionnewsubscriptionapiPRODnewsubscriptionapilambdanewsubscriptionapiPRODE7DA6E3AANY2F19D447": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "newsubscriptionapilambdaC15E5D99",
            "Arn",
          ],
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":execute-api:",
              {
                "Ref": "AWS::Region",
              },
              ":",
              {
                "Ref": "AWS::AccountId",
              },
              ":",
              {
                "Ref": "newsubscriptionapilambdanewsubscriptionapiPRODF2C9BF91",
              },
              "/",
              {
                "Ref": "newsubscriptionapilambdanewsubscriptionapiPRODDeploymentStagePROD5AE60C2F",
              },
              "/*/",
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "newsubscriptionapilambdanewsubscriptionapiPRODAccountA1135F44": {
      "DeletionPolicy": "Retain",
      "DependsOn": [
        "newsubscriptionapilambdanewsubscriptionapiPRODF2C9BF91",
      ],
      "Properties": {
        "CloudWatchRoleArn": {
          "Fn::GetAtt": [
            "newsubscriptionapilambdanewsubscriptionapiPRODCloudWatchRole01A2D6D3",
            "Arn",
          ],
        },
      },
      "Type": "AWS::ApiGateway::Account",
      "UpdateReplacePolicy": "Retain",
    },
    "newsubscriptionapilambdanewsubscriptionapiPRODCloudWatchRole01A2D6D3": {
      "DeletionPolicy": "Retain",
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "apigateway.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AmazonAPIGatewayPushToCloudWatchLogs",
              ],
            ],
          },
        ],
        "Tags": [
          {
            "Key": "App",
            "Value": "new-subscription-api",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "support",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
      "UpdateReplacePolicy": "Retain",
    },
    "newsubscriptionapilambdanewsubscriptionapiPRODDeployment238790AA78fdac29400c6794f5fc86f1d27735ae": {
      "DependsOn": [
        "newsubscriptionapilambdanewsubscriptionapiPRODproxyANYB0FD8929",
        "newsubscriptionapilambdanewsubscriptionapiPRODproxy906EE08E",
        "newsubscriptionapilambdanewsubscriptionapiPRODANYAFE9D7DE",
      ],
      "Properties": {
        "Description": "API Gateway created by CDK",
        "RestApiId": {
          "Ref": "newsubscriptionapilambdanewsubscriptionapiPRODF2C9BF91",
        },
      },
      "Type": "AWS::ApiGateway::Deployment",
    },
    "newsubscriptionapilambdanewsubscriptionapiPRODDeploymentStagePROD5AE60C2F": {
      "DependsOn": [
        "newsubscriptionapilambdanewsubscriptionapiPRODAccountA1135F44",
      ],
      "Properties": {
        "DeploymentId": {
          "Ref": "newsubscriptionapilambdanewsubscriptionapiPRODDeployment238790AA78fdac29400c6794f5fc86f1d27735ae",
        },
        "RestApiId": {
          "Ref": "newsubscriptionapilambdanewsubscriptionapiPRODF2C9BF91",
        },
        "StageName": "PROD",
        "Tags": [
          {
            "Key": "App",
            "Value": "new-subscription-api",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "support",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::ApiGateway::Stage",
    },
    "newsubscriptionapilambdanewsubscriptionapiPRODF2C9BF91": {
      "Properties": {
        "ApiKeySourceType": "HEADER",
        "Description": "API Gateway created by CDK",
        "Name": "new-subscription-api-PROD",
        "Tags": [
          {
            "Key": "App",
            "Value": "new-subscription-api",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "support",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::ApiGateway::RestApi",
    },
    "newsubscriptionapilambdanewsubscriptionapiPRODUsagePlanEB4B8E7B": {
      "Properties": {
        "ApiStages": [
          {
            "ApiId": {
              "Ref": "newsubscriptionapilambdanewsubscriptionapiPRODF2C9BF91",
            },
            "Stage": {
              "Ref": "newsubscriptionapilambdanewsubscriptionapiPRODDeploymentStagePROD5AE60C2F",
            },
            "Throttle": {},
          },
        ],
        "Description": "REST endpoints for new-subscription-api",
        "Tags": [
          {
            "Key": "App",
            "Value": "new-subscription-api",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "support",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
        "UsagePlanName": "new-subscription-api-PROD",
      },
      "Type": "AWS::ApiGateway::UsagePlan",
    },
    "newsubscriptionapilambdanewsubscriptionapiPRODUsagePlanUsagePlanKeyResourcenewsubscriptionapiPRODnewsubscriptionapilambdanewsubscriptionapiPRODnewsubscriptionapikeyPRODB7B0D183EE168842": {
      "Properties": {
        "KeyId": {
          "Ref": "newsubscriptionapilambdanewsubscriptionapiPRODnewsubscriptionapikeyPRODB3FC770A",
        },
        "KeyType": "API_KEY",
        "UsagePlanId": {
          "Ref": "newsubscriptionapilambdanewsubscriptionapiPRODUsagePlanEB4B8E7B",
        },
      },
      "Type": "AWS::ApiGateway::UsagePlanKey",
    },
    "newsubscriptionapilambdanewsubscriptionapiPRODnewsubscriptionapikeyPRODB3FC770A": {
      "Properties": {
        "Enabled": true,
        "Name": "new-subscription-api-key-PROD",
        "StageKeys": [
          {
            "RestApiId": {
              "Ref": "newsubscriptionapilambdanewsubscriptionapiPRODF2C9BF91",
            },
            "StageName": {
              "Ref": "newsubscriptionapilambdanewsubscriptionapiPRODDeploymentStagePROD5AE60C2F",
            },
          },
        ],
        "Tags": [
          {
            "Key": "App",
            "Value": "new-subscription-api",
          },
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/support-service-lambdas",
          },
          {
            "Key": "Stack",
            "Value": "support",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::ApiGateway::ApiKey",
    },
    "newsubscriptionapilambdanewsubscriptionapiPRODproxy906EE08E": {
      "Properties": {
        "ParentId": {
          "Fn::GetAtt": [
            "newsubscriptionapilambdanewsubscriptionapiPRODF2C9BF91",
            "RootResourceId",
          ],
        },
        "PathPart": "{proxy+}",
        "RestApiId": {
          "Ref": "newsubscriptionapilambdanewsubscriptionapiPRODF2C9BF91",
        },
      },
      "Type": "AWS::ApiGateway::Resource",
    },
    "newsubscriptionapilambdanewsubscriptionapiPRODproxyANYApiPermissionTestnewsubscriptionapiPRODnewsubscriptionapilambdanewsubscriptionapiPRODE7DA6E3AANYproxy36F9C02F": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "newsubscriptionapilambdaC15E5D99",
            "Arn",
          ],
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":execute-api:",
              {
                "Ref": "AWS::Region",
              },
              ":",
              {
                "Ref": "AWS::AccountId",
              },
              ":",
              {
                "Ref": "newsubscriptionapilambdanewsubscriptionapiPRODF2C9BF91",
              },
              "/test-invoke-stage/*/*",
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "newsubscriptionapilambdanewsubscriptionapiPRODproxyANYApiPermissionnewsubscriptionapiPRODnewsubscriptionapilambdanewsubscriptionapiPRODE7DA6E3AANYproxyC5111B4F": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "newsubscriptionapilambdaC15E5D99",
            "Arn",
          ],
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":execute-api:",
              {
                "Ref": "AWS::Region",
              },
              ":",
              {
                "Ref": "AWS::AccountId",
              },
              ":",
              {
                "Ref": "newsubscriptionapilambdanewsubscriptionapiPRODF2C9BF91",
              },
              "/",
              {
                "Ref": "newsubscriptionapilambdanewsubscriptionapiPRODDeploymentStagePROD5AE60C2F",
              },
              "/*/*",
            ],
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "newsubscriptionapilambdanewsubscriptionapiPRODproxyANYB0FD8929": {
      "Properties": {
        "ApiKeyRequired": true,
        "AuthorizationType": "NONE",
        "HttpMethod": "ANY",
        "Integration": {
          "IntegrationHttpMethod": "POST",
          "Type": "AWS_PROXY",
          "Uri": {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":apigateway:",
                {
                  "Ref": "AWS::Region",
                },
                ":lambda:path/2015-03-31/functions/",
                {
                  "Fn::GetAtt": [
                    "newsubscriptionapilambdaC15E5D99",
                    "Arn",
                  ],
                },
                "/invocations",
              ],
            ],
          },
        },
        "ResourceId": {
          "Ref": "newsubscriptionapilambdanewsubscriptionapiPRODproxy906EE08E",
        },
        "RestApiId": {
          "Ref": "newsubscriptionapilambdanewsubscriptionapiPRODF2C9BF91",
        },
      },
      "Type": "AWS::ApiGateway::Method",
    },
  },
}
`;
